--- a/index.html
+++ b/index.html
@@ -1,21 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
- <header>
-    <h1>real</h1>
-    <img src="" alt="">
-    <ul></ul>
-    <li>insustuicao</li>
-    <li>estudantes</li>
-    
+    <header class="cabecalho">
+        <img class="cabecalho-imagem" src="Protótipo site (Copy) (2).png" alt="socrats-cabecalho">
+        <h1 class="cabecalho-titulo"> site escola</h1>
+        <ul class="cabecalho-lista">
+            <li class="cabecalho-inten">intituicao</li>
+            <li class="cabecalho-inten">estudante</li>
+        </ul>
 
 
- </header>   
+
+
+
+    </header>
 </body>
+
 </html>
