--- a/index.html
+++ b/index.html
@@ -6,21 +6,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
     <header class="cabecalho">
-        <img class="cabecalho-imagem" src="Protótipo site (Copy) (2).png" alt="socrats-cabecalho">
+        <img class="cabecalho-imagem" src="alurastart logo 1.png" alt="socrats-cabecalho">
         <h1 class="cabecalho-titulo"> site escola</h1>
         <ul class="cabecalho-lista">
             <li class="cabecalho-inten">intituicao</li>
             <li class="cabecalho-inten">estudante</li>
         </ul>
-
-
-
-
-
     </header>
 </body>
 
